packages/cashc/test/syntax/success/bitwise.cash
contract Test(bytes8 x, bytes8 y) {
    function hello() {
        require((x | y) == y);
    }
}
