packages/cashc/test/syntax/fail/unary_plus.cash
contract Test() {
    function hello(int a) {
        int b = 10 - +4;
        require(b == a);
    }
}
